fix(sidebar): Fix the sidebar styles for Nextcloud 17 compatibility and remove the attribute table header for better readability

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,8 +1,12 @@
-.thumbnailContainer {
+.thumbnailContainer-dicomviewer {
     padding-top: 10px;
     width: calc(100% + 15px);
     margin-right: -15px !important;
-    max-height: 400px;
+    overflow-y: hidden !important;
+}
+
+.thumbnailContainer-dicomviewer * {
+    cursor: auto !important;
 }
 
 .sidebar-container {
